--- a/hello.html
+++ b/hello.html
@@ -9,23 +9,23 @@
 <body>
     <div class="main">
         <h1>Welcome to Tic Tac Toe Game</h1>
-        <button class="computer">
+        <button class="computer"><a href=player.html>
              play with Computer
         </button>
-        <button class="friend">
+        <button class="friend"><a href=index.html>
              play with Friend
         </button>
     </div>
     
 </body>
 <script>
-    document.querySelector('.computer').addEventListener('click', function(e) {
-        e.preventDefault();
-        window.location.href = '/index.html';
-    });
-    document.querySelector('.friend').addEventListener('click', function(e) {
-        e.preventDefault();
-        window.location.href = '/player.html';
-    });
+    // document.querySelector('.computer').addEventListener('click', function(e) {
+    //     e.preventDefault();
+    //     window.location.href = '/index.html';
+    // });
+    // document.querySelector('.friend').addEventListener('click', function(e) {
+    //     e.preventDefault();
+    //     window.location.href = '/player.html';
+    // });
 </script>
 </html>
